[project]
name = "lifetracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladislav Ibraev",email = "vladislavibraev@gmail.com"}
]
packages = [{ include = "lifetracker", from = "src" }]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "0.12.0"
pre-commit = "4.1.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"

