[project]
name = "lifetracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "alembic==1.16.2",
    "asyncpg==0.30.0",
    "fastapi~=0.115",
    "pydantic~=2.11",
    "pydantic-settings~=2.10",
    "redis~=6.0",
    "sqlalchemy==2.0.40",
    "sqlalchemy-utils==0.41.2",
    "uvicorn~=0.29",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]
